force-app/main/default/objects/FieldHistoryTracking__c/FieldHistoryTracking__c.object-meta.xml
<CustomObject>
    <label>FieldHistoryTracking</label>
    <nameField>
        <label>FieldHistoryTracking Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FieldHistoryTrackings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>