force-app/main/default/objects/FieldHistoryTracking__c/fields/Activity_User__c.field-meta.xml
<CustomField>
    <fullName>Activity_User__c</fullName>
    <label>Activity User</label>
    <type>TextArea</type>
</CustomField>