force-app/main/default/objects/FieldHistoryTracking__c/fields/ActivityUserId__c.field-meta.xml
<CustomField>
    <fullName>ActivityUserId__c</fullName>
    <label>ActivityUserId</label>
    <length>25</length>
    <type>Text</type>
</CustomField>