force-app/main/default/objects/FieldHistoryTracking__c/fields/Object_Field_Value__c.field-meta.xml
<CustomField>
    <fullName>Object_Field_Value__c</fullName>
    <label>Object Field Value</label>
    <type>TextArea</type>
</CustomField>