force-app/main/default/objects/FieldHistoryTracking__c/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <label>Object Name</label>
    <type>TextArea</type>
</CustomField>