force-app/main/default/objects/FieldHistoryTracking__c/fields/object_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>object_Record_Id__c</fullName>
    <label>object Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>