force-app/main/default/objects/FieldHistoryTracking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>object_Record_Id__c</columns>
    <columns>Object_Field_Value__c</columns>
    <columns>Activity_User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label> 
</ListView>